fix: 处理eslintConfig配置报错

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "cross-env node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -68,8 +68,13 @@
       "react-app",
       "react-app/jest"
     ],
-    "env": {
-      "NODE_ENV": "development"
+    "parserOptions": {
+      "babelOptions": {
+        "presets": [
+          ["babel-preset-react-app", false],
+          "babel-preset-react-app/prod"
+        ]
+      }
     }
   },
   "browserslist": {
