--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "gsap": "^3.10.4",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "pixi.js": "^6.4.2",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
@@ -71,7 +73,10 @@
     "parserOptions": {
       "babelOptions": {
         "presets": [
-          ["babel-preset-react-app", false],
+          [
+            "babel-preset-react-app",
+            false
+          ],
           "babel-preset-react-app/prod"
         ]
       }
@@ -144,8 +149,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3"
   }
 }
